--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,36 @@
 <html ng-app="Website">
 <head>
 	<base href="/">	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
-	<script type="text/javascript" src="blog.js"></script>
-	<script type="text/javascript" src="resume.js"></script>
 
+	<!-- font -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	
 	<link rel="stylesheet" type="text/css" href="compass/stylesheets/screen.css">
 	<title>Nick Ellsworth</title>
 
 </head>
 <body ng-controller="MainCtrl">
 	<div id="nav">
-		<div class="navLink" ui-sref="projects">Projects</div><div class="navLink" ui-sref="blog">Blog</div><div class="navLink" ui-sref="resume">Resume</div><div class="navLink">About</div>
+		<div class="navLink" ui-sref="projects" tabindex="1">Projects</div><!--
+		--><div class="navLink" ui-sref="blog" tabindex="2">Blog</div><!--
+		--><div class="navLink" ui-sref="resume" tabindex="3">Resume</div><!--
+		--><div class="navLink" tabindex="4">About</div>
 	</div>
 	<ui-view></ui-view>
+
+
+
+	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script type="text/javascript" src="bower_components/marked/lib/marked.js"></script>
+	<script type="text/javascript" src="bower_components/angular-marked/angular-marked.js"></script>
+
+	
+	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="blog.js"></script>
+	<script type="text/javascript" src="resume.js"></script>
+	<script type="text/javascript" src="admin.js"></script>
 </body>
 
 </html>
