modularized stylesheet and added keyboard nav

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
 
 	
 	<script type="text/javascript" src="app.js"></script>
+
+	<script type="text/javascript" src="projects.js"></script>
 	<script type="text/javascript" src="blog.js"></script>
 	<script type="text/javascript" src="resume.js"></script>
 	<script type="text/javascript" src="admin.js"></script>
