--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	</div>
 
 
-
+	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="bower_components/marked/lib/marked.js"></script>
