--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 	<!-- font -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 	
 	<link rel="stylesheet" type="text/css" href="compass/stylesheets/screen.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/default.min.css">
 	<title>Nick Ellsworth</title>
 
 </head>
@@ -27,6 +29,7 @@
 	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="bower_components/marked/lib/marked.js"></script>
 	<script type="text/javascript" src="bower_components/angular-marked/angular-marked.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
 
 	
 	<script type="text/javascript" src="app.js"></script>
