--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
 
 </head>
 <body>
-	<div id="nav" ng-controller="NavCtrl" ng-cloak>
+	<div id="nav" ng-controller="NavCtrl">
 			   	<div class="navBar beginning"></div>
-			   	<div class="navLink" ng-repeat="button in nav" ui-sref="{{button.name}}" tabindex="1" ng-click='setActive(button.name)' ng-class='{active: activePageObj.active == button.name}'>{{button.displayName}}</div>
+			   	<div class="navLink" ng-repeat="button in nav" ui-sref="{{button.name}}" tabindex="1" ng-click='setActive(button.name)' ng-class='{active: activePageObj.active == button.name}'><span ng-cloak>{{button.displayName}}</span></div>
 			  	<div class="navBar end"></div>
 	</div>
 	<div id="content">
