--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
 	<script type="text/javascript" src="admin.js"></script>
 	<script type="text/javascript" src="about.js"></script>
 	<script type="text/javascript" src="nav.js"></script>
+	<script type="text/javascript" src="auth.js"></script>
+
 
 </body>
 
