--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 	<script type="text/javascript" src="nav.js"></script>
 	<script type="text/javascript" src="auth.js"></script>
 
-
 </body>
+<!-- <footer>hello! you can use the J and K keys to navigate.<br><span ui-sref="login">are you nick?</span></footer> -->
 
 </html>
